Added basic display

--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,10 @@
         <link rel="stylesheet" type="text/css" href="./index.css" media="screen" />
 
         <!-- Scripts -->
-        <script src="../scripts/player.js"></script>
+        <script src="../scripts/objects/player.js"></script>
+        <script src="../scripts/objects/Block.js"></script>
         <script src="../scripts/map_generation.js"></script>
-        <script src="../scripts/physics_engine.js"></script>
+        <script src="../scripts/engine/physics_engine.js"></script>
 
     </head>
     <body>
